favicon added, more subpages created

--- a/changelog.html
+++ b/changelog.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 <meta name="description" content="This website showcases my original origami models. I come up with a lot of models, ranging from futuristic vehicles to flowers. Have a look!"/>
 </head>
@@ -52,7 +53,7 @@
     <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
     <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
     <p id = 'title'>Change Log</p>
-    <p id = 'subtitle'>This site was last updated on: 1/5/22</p>
+    <p id = 'subtitle'>My old site is here: <a href="https://pitchk.github.io/h">https://pitchk.github.io/h.</a> All the things on that site is being migrated to this new site. <br><br> Last updated: 1/10/2022</p>
     <div id = 'changelog'></div>
     
     <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
