--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
 <meta name="description" content="This website showcases my original origami models. I come up with a lot of models, ranging from futuristic vehicles to flowers. Have a look!"/>
+<link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png">
 </head>
 <body>
     <!--header-->
