cleaned up some more

--- a/models/air-point-21.html
+++ b/models/air-point-21.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Origami website</title>
+    <title>How to fold: the Air Point '21</title>
     <link rel="stylesheet" href="css/modeltemplate.css">
     <link rel="stylesheet" href="css/individualmodel.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,7 +82,7 @@
             <a href="" id = 'bottomIcon'>The Origamitician</a>
         </div>
         
-        <p id = 'bottomCaption'>This website is updated every time I come up with a new model. Stay tuned and visit back frequently to check for any new updates! All new updates are logged onto this <a href="changelog.html">change log.</a></p>
+        <p id = 'bottomCaption'>This website is updated every time I come up with a new model. Stay tuned and visit back frequently to check for any new updates! All new updates are logged onto this <a href="https://origamitician.github.io/changelog.html">change log.</a></p>
 
         <div id = 'footerflex'>
             <div id = 'left'>
@@ -113,6 +113,6 @@
 <script src="js/modeltemplate.js"></script>
 <script src="js/listofsubpages.js"></script>
 <script>
-    createSubPage(5, [2]);
+    createSubPage(8, []);
 </script>
 </html>
