--- a/models/index.html
+++ b/models/index.html
@@ -86,7 +86,7 @@
             
         </div>  
     </footer>
-    <div id = 'credit'>&copy 2021 The Origamitician. <span id = 'code'>&lt;/&gt;</span> by <a href="/about-me" >Micaiah Cape</a></div>
+    <div id = 'credit'>&copy 2021 The Origamitician. <span id = 'code'>&lt;/&gt;</span> by <a href="https://origamitician.github.io/about.html" >Micaiah Cape</a></div>
     
 </body>
 <script type="text/javascript" src="js/app.js"></script>
