--- a/models/sea-shrimp.html
+++ b/models/sea-shrimp.html
@@ -105,7 +105,7 @@
             
         </div>  
     </footer>
-    <div id = 'credit'>&copy 2021 The Origamitician. <span id = 'code'>&lt;/&gt;</span> by <a href="/about-me" >Micaiah Cape</a></div>
+    <div id = 'credit'>&copy 2021 The Origamitician. <span id = 'code'>&lt;/&gt;</span> by <a href="https://origamitician.github.io/about.html" >Micaiah Cape</a></div>
     
 </body>
 
